@@ -1,0 +1,26 @@
+<% if @objects.size == 0 %>
+<div class="hero-unit">
+  <p class="center">No results were returned. Quick search allows you to quickly jump to a specified project.</p>
+</div>
+<% else %>
+  <div class="row">
+    <% [['Projects', @projects]].each do |name, scope| %>
+      <% if scope.size > 0 %>
+        <div class="span3">
+        <div class="download-container" style="overflow:hidden">
+          <h3><%= name %></h3>
+
+          <table class="table table-hover table-condensed">
+          <% scope.each do |item| %>
+            <% link = item.respond_to?('project') ? [item.project, item] : item %>
+            <tr data-link="<%= url_for(link) %>" style="cursor:pointer">
+              <td><%= link_to highlight(item.name, params[:q], highlighter: '<span class="highlight">\1</span>'), link, rel: "tooltip", data: { placement: 'right' }, title: "#{item.project.name if item.respond_to?('project')}" %></td>
+            </tr>
+          <% end %>
+          </table>
+        </div>
+        </div>
+      <% end %>
+    <% end %>
+  </div>
+<% end %>
