@@ -51,6 +51,10 @@ Contour.setup do |config|
     {
       name: 'About', display: 'always', path: 'about_path', position: 'left',
       links: []
+    },
+    {
+      name: '"<form id=\"global-search-form\" class=\"navbar-search pull-left\" action=\"#{search_path}\" style=\"margin-top:-5px\"><input id=\"global-search\" name=\"q\" type=\"text\" autocomplete=\"off\" class=\"search-query\" value=\"#{params[:q]}\" placeholder=\"Search\"></form>".html_safe',
+      display: 'signed_in', position: 'left', eval: true, path: ''
     }
   ]
 
