@@ -4,6 +4,12 @@
   * Database default updated to use PostgreSQL
     * Instructions {MIGRATING_TO_POSTGRESQL}[https://github.com/remomueller/documentation/blob/master/MIGRATING_TO_POSTGRESQL.md]
 
+* Enhancements
+  * Quick project search added in the top navigation bar
+    * Alt|Command + Shift + P will set focus on the search box
+    * Entering a Project name will jump to that project
+    * With multiple results, the user will be directed to a search results page
+
 == 0.24.5 (January 22, 2013)
 
 * Enhancements
